--- a/css/style.css
+++ b/css/style.css
@@ -101,3 +101,10 @@ footer{
 	filter:alpha(opacity=90);
 	opacity:0.9;
 }
+
+#result {
+	padding: 10px 0;
+	border-bottom: 1px #ccc dotted;
+	list-style: none;
+	overflow: auto;
+}
